Mobile fix
Fix circles overlapping titles on mobile

--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -173,6 +173,7 @@ h2 {
 	padding: 5px 0;
 	margin-bottom: 2rem;
 	width: 100%;
+	padding-right: 1.5rem;
 
 	&::before {
 		content: '';
